tests/baselines/reference/computedPropertyNames21_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames21_ES5.ts(5,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames21_ES5.ts(5,6): error TS2465: 'this' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames21_ES5.ts (2 errors) ====
    class C {
        bar() {
            return 0;
        }
        [this.bar()]() { }
        ~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
         ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
    }